--- a/api-specificatie/backoffice.yaml
+++ b/api-specificatie/backoffice.yaml
@@ -28,11 +28,11 @@ tags:
 #      description: todo
 #      url: 'todo'
 paths:
-  /abonnementen/abonnementRecord:
+  /backoffice/abonnement:
       post:
         tags:
           - Verwerken abonnementen
-        summary: Abonneren op een specifiek record
+        summary: Abonneren op een specifiek record, persoon of organisatie
         operationId: postAbonnementRecord
         parameters:
         - in: header
@@ -49,24 +49,35 @@ paths:
               schema:
                 type: object
                 properties:
-                  record:
-                    description: naam van entiteit # of entiteitID?
-                    type: string
-                  eventType:
-                    description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
-                    type: string
-                    enum: ["all","create", "update"]
                   organisatieId:
                     description: identificatie van de organisatie
                     type: string
                   organisatieIdType:
                     description: type identificatie van de organisatie
                     type: string
+                  abonnementType:
+                    description: Type abonement dat geplaatst moet worden
+                    type: string
+                    enum: ["organisatie","record", "persoon"]
+                  eventType:
+                    description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+                    type: string
+                  entiteit:
+                    description: entiteit waarop het abonnement geplaatst moet worden
+                    type: string
+                    enum: ["all","create", "update", "delete"]
+                  recordId:
+                    description: Identificatie van het record waarop het abonnement geplaatst wordt
+                    type: string
+                  personId:
+                    description: Identificatie van de persoon waarop het abonnement geplaatst wordt
+                    type: string         
                 required:
-                  - record
-                  - event
                   - organisatieId
                   - organisatieIdType
+                  - abonnementType
+                  - eventType
+                  - entiteit                  
         callbacks:   # Callback definition
           notificatie:   # Event name
             '{abonneeEndpoint/notificatie}':   # The callback URL for delivering notifications
@@ -101,7 +112,6 @@ paths:
                           - timestamp
                           - abonnementId
                           - eventType
-                          - message
                 responses:   # Expected responses to the callback message
                   '200':
                     description: Your server returns this code if it accepts the callback
@@ -119,104 +129,7 @@ paths:
           '400':
             description: Ongeldig Record - Abonnement niet aangemaakt
             content: {}
-  /abonnementen/persoon:
-      post:
-        tags:
-          - Verwerken abonnementen
-        summary: Abonneren op indicaties voor een specifiek persoon
-        operationId: postAbonnementPersoon
-        parameters:
-        - in: header
-          name: X-orgKey
-          description: Uniek ID van de organisatie binnen het netwerk
-          schema:
-            type: integer
-            format: int32
-          required: true
-        - in: header
-          name: X-Request-ID
-          description: Identificatie van het request
-          schema:
-            type: string
-          required: true
-        requestBody:
-          required: true
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  recordType:
-                    type: string
-                    enum: ["wlzindicatie"]
-                  eventType:
-                    description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
-                    type: string
-                    enum: ["all","create", "update"]
-                  persoonId:
-                    description: identificatie persoon
-                    type: string
-                  persoonIdType:
-                    description: type identificatie persoon
-                    type: string
-                    enum: ["BSN"]
-                required:
-                  - event
-                  - organisatieId
-                  - persoonIdType
-        callbacks:   # Callback definition
-          notificatie:   # Event name
-            '{abonneeEndpoint/notificatie}':   # The callback URL for delivering notifications
-              post:
-                parameters:
-                - in: header
-                  name: X-orgKey
-                  description: Uniek ID van de organisatie binnen het netwerk
-                  schema:
-                    type: integer
-                    format: int32
-                  required: true
-                requestBody:   # Contents of the callback message
-                  required: true
-                  content:
-                    application/json:
-                      schema:
-                        type: object
-                        properties:
-                          timestamp:
-                              type: string
-                              format: date-time
-                          abonnementId:
-                            type: string
-                            format: uuid
-                          eventType:
-                            type: string
-                            enum: ["create", "update"]
-                          recordID:
-                            type: string
-                        required:
-                          - timestamp
-                          - abonnementId
-                          - eventType
-                          - message
-                responses:   # Expected responses to the callback message
-                  '200':
-                    description: Your server returns this code if it accepts the callback
-        responses:
-          '201':
-            description: Abonnement aangemaakt
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    abonnementId:
-                      type: string
-                      format: uuid
-          '400':
-            description: Ongeldig BSN - Abonnement niet aangemaakt
-            content: {}
-  /abonnementen/{abonnementID}:
+  /backoffice//abonnement/{abonnementID}:
     delete:
       tags:
         - Verwerken abonnementen
@@ -249,7 +162,7 @@ paths:
           description: Abonnement verwijderd
         '404':
           description: abonnementID niet gevonden 
-  /notificaties:
+  /backoffice/notificaties:
     post:
       tags:
         - Verwerken notificaties
