--- a/api-specificatie/netwerkpunt.yaml
+++ b/api-specificatie/netwerkpunt.yaml
@@ -122,6 +122,8 @@ paths:
                           recordId:
                             type: string
                         required:
+                          - organisatieId
+                          - organisatieIdType
                           - timestamp
                           - abonnementId
                           - eventType
@@ -170,6 +172,12 @@ paths:
             schema:
               type: object
               properties:
+                organisatieId:
+                  description: identificatie van de organisatie
+                  type: string
+                organisatieIdType:
+                  description: type identificatie van de organisatie
+                  type: string
                 timestamp:
                     type: string
                     format: date-time
@@ -182,6 +190,8 @@ paths:
                 recordId:
                   type: string
               required:
+                - organisatieId
+                - organisatieIdType
                 - timestamp
                 - abonnementId
                 - eventType
