--- a/api-specificatie/backoffice.yaml
+++ b/api-specificatie/backoffice.yaml
@@ -19,9 +19,9 @@ servers:
 tags:
   - name: Verwerken abonnementen
     description: 'Operaties voor het verwerken van volgindicaties'
-#    externalDocs:
-#      description: todo
-#      url: 'todo'
+  #    externalDocs:
+  #      description: todo
+  #      url: 'todo'
   - name: Verwerken notificaties
     description: 'Operaties voor het verwerken van notificaties'
 #    externalDocs:
@@ -29,12 +29,12 @@ tags:
 #      url: 'todo'
 paths:
   /backoffice/abonnement:
-      post:
-        tags:
-          - Verwerken abonnementen
-        summary: Abonneren op een specifiek record, persoon of organisatie
-        operationId: postAbonnementRecord
-        parameters:
+    post:
+      tags:
+        - Verwerken abonnementen
+      summary: Abonneren op een specifiek record, persoon of organisatie
+      operationId: postAbonnementRecord
+      parameters:
         - in: header
           name: X-orgKey
           description: Uniek ID van de organisatie binnen het netwerk
@@ -48,47 +48,17 @@ paths:
           schema:
             type: string
           required: true
-        requestBody:
-          required: true
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  organisatieId:
-                    description: identificatie van de organisatie
-                    type: string
-                  organisatieIdType:
-                    description: type identificatie van de organisatie
-                    type: string
-                  abonnementType:
-                    description: Type abonement dat geplaatst moet worden
-                    type: string
-                    enum: ["organisatie","record", "persoon"]
-                  eventType:
-                    description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
-                    type: string
-                    enum: ["all","create", "update", "delete"]
-                  entiteit:
-                    description: entiteit waarop het abonnement geplaatst moet worden
-                    type: string
-                  recordId:
-                    description: Identificatie van het record waarop het abonnement geplaatst wordt
-                    type: string
-                  personId:
-                    description: Identificatie van de persoon waarop het abonnement geplaatst wordt
-                    type: string         
-                required:
-                  - organisatieId
-                  - organisatieIdType
-                  - abonnementType
-                  - eventType
-                  - entiteit                  
-        callbacks:   # Callback definition
-          notificatie:   # Event name
-            '{/netwerkpunt/zendNotificatie}':   # The callback URL for delivering notifications
-              post:
-                parameters:
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Abonnement"
+      callbacks: # Callback definition
+        notificatie: # Event name
+          '{/netwerkpunt/zendNotificatie}': # The callback URL for delivering notifications
+            post:
+              parameters:
                 - in: header
                   name: X-orgKey
                   description: Uniek ID van de organisatie binnen het netwerk
@@ -102,45 +72,26 @@ paths:
                   schema:
                     type: string
                   required: true
-                requestBody:   # Contents of the callback message
-                  required: true
-                  content:
-                    application/json:
-                      schema:
-                        type: object
-                        properties:
-                          timestamp:
-                              type: string
-                              format: date-time
-                          eventType:
-                            type: string
-                            enum: ["all","create", "update", "delete"]
-                          recordId:
-                            type: string
-                        required:
-                          - organisatieId
-                          - organisatieIdType
-                          - timestamp
-                          - recordId
-                          - eventType
-                responses:   # Expected responses to the callback message
-                  '200':
-                    description: Your server returns this code if it accepts the callback
-        responses:
-          '201':
-            description: Volgindicatie aangemaakt
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    AbonnementId:
-                      type: string
-                      format: uuid
-          '400':
-            description: Ongeldig Record - Abonnement niet aangemaakt
-            content: {}
-  /backoffice/abonnement/{abonnementID}:
+              requestBody: # Contents of the callback message
+                required: true
+                content:
+                  application/json:
+                    schema:
+                      $ref: "#/components/schemas/Callback"
+              responses: # Expected responses to the callback message
+                '200':
+                  description: Your server returns this code if it accepts the callback
+      responses:
+        '201':
+          description: Volgindicatie aangemaakt
+          content:
+            application/json:
+              schema:
+                type: string
+                format: uuid
+        '400':
+          description: Ongeldig Record - Abonnement niet aangemaakt
+  /backoffice/abonnement/{abonnementId}:
     delete:
       tags:
         - Verwerken abonnementen
@@ -172,7 +123,7 @@ paths:
         '204':
           description: Volgindicatie verwijderd
         '404':
-          description: abonnementID niet gevonden 
+          description: abonnementID niet gevonden
   /backoffice/notificaties:
     post:
       tags:
@@ -195,41 +146,92 @@ paths:
             type: string
           required: true
       requestBody:
-                  required: true
-                  content:
-                    application/json:
-                      schema:
-                        type: object
-                        properties:
-                          organisatieId:
-                            description: identificatie van de organisatie
-                            type: string
-                          organisatieIdType:
-                            description: type identificatie van de organisatie
-                            type: string
-                          timestamp:
-                              type: string
-                              format: date-time
-                          abonnementId:
-                            type: string
-                            format: uuid
-                          eventType:
-                            type: string
-                            enum: ["all","create", "update", "delete"]
-                          recordID:
-                            type: string
-                            example: "https://api.ciz.nl/wlzindicatieregister/wlzindicaties/da8ebd42-d29b-4508-8604-ae7d2c6bbddd"
-                        required:
-                          - organisatieId
-                          - organisatieIdType
-                          - timestamp
-                          - abonnementId
-                          - eventType
-                          - recordID
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Notificatie"
       responses:
         '202':
           description: Accepted
-          content: {}
         '400':
           description: Bad Request
-          content: {}
+components:
+  schemas:
+    Abonnement:
+      type: object
+      properties:
+        organisatieId:
+          description: identificatie van de organisatie
+          type: string
+        organisatieIdType:
+          description: type identificatie van de organisatie
+          type: string
+        abonnementType:
+          description: Type abonement dat geplaatst moet worden
+          type: string
+          enum: [ "organisatie","record", "persoon" ]
+        eventType:
+          description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+          type: string
+          enum: [ "all","create", "update", "delete" ]
+        entiteit:
+          description: entiteit waarop het abonnement geplaatst moet worden
+          type: string
+        recordId:
+          description: Identificatie van het record waarop het abonnement geplaatst wordt
+          type: string
+        personId:
+          description: Identificatie van de persoon waarop het abonnement geplaatst wordt
+          type: string
+      required:
+        - organisatieId
+        - organisatieIdType
+        - abonnementType
+        - eventType
+        - entiteit
+    Callback:
+      type: object
+      properties:
+        timestamp:
+          type: string
+          format: date-time
+        eventType:
+          type: string
+          enum: [ "all","create", "update", "delete" ]
+        recordId:
+          type: string
+      required:
+        - organisatieId
+        - organisatieIdType
+        - timestamp
+        - recordId
+        - eventType
+    Notificatie:
+      type: object
+      properties:
+        organisatieId:
+          description: identificatie van de organisatie
+          type: string
+        organisatieIdType:
+          description: type identificatie van de organisatie
+          type: string
+        timestamp:
+          type: string
+          format: date-time
+        abonnementId:
+          type: string
+          format: uuid
+        eventType:
+          type: string
+          enum: [ "all","create", "update", "delete" ]
+        recordID:
+          type: string
+          example: "https://api.ciz.nl/wlzindicatieregister/wlzindicaties/da8ebd42-d29b-4508-8604-ae7d2c6bbddd"
+      required:
+        - organisatieId
+        - organisatieIdType
+        - timestamp
+        - abonnementId
+        - eventType
+        - recordID
