--- a/api-specificatie/netwerkpunt.yaml
+++ b/api-specificatie/netwerkpunt.yaml
@@ -53,37 +53,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  organisatieId:
-                    description: identificatie van de organisatie
-                    type: string
-                  organisatieIdType:
-                    description: type identificatie van de organisatie
-                    type: string
-                  abonnementType:
-                    description: Type abonement dat geplaatst moet worden
-                    type: string
-                    enum: ["organisatie","record", "persoon"]
-                  eventType:
-                    description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
-                    type: string
-                    enum: ["all","create", "update", "delete"]
-                  entiteit:
-                    description: entiteit waarop het abonnement geplaatst moet worden
-                    type: string
-                  recordId:
-                    description: Identificatie van het record waarop het abonnement geplaatst wordt
-                    type: string
-                  personId:
-                    description: Identificatie van de persoon waarop het abonnement geplaatst wordt
-                    type: string 
-                required:
-                  - organisatieId
-                  - organisatieIdType
-                  - abonnementType
-                  - eventType
-                  - entiteit                  
+                $ref: "#/components/schemas/Abonnement"                
         callbacks:   # Callback definition
           notificatie:   # Event name
             '{abonneeEndpoint/notificatie}':   # The callback URL for delivering notifications
@@ -102,32 +72,13 @@ paths:
                   schema:
                     type: string
                   required: true
-                requestBody:   # Contents of the callback message
+                requestBody: # Contents of the callback message
                   required: true
                   content:
                     application/json:
                       schema:
-                        type: object
-                        properties:
-                          timestamp:
-                              type: string
-                              format: date-time
-                          abonnementId:
-                            type: string
-                            format: uuid
-                          eventType:
-                            type: string
-                            enum: ["all","create", "update", "delete"]
-                          recordId:
-                            type: string
-                        required:
-                          - organisatieId
-                          - organisatieIdType
-                          - timestamp
-                          - abonnementId
-                          - eventType
-                          - recordId
-                responses:   # Expected responses to the callback message
+                        $ref: "#/components/schemas/Notificatie"
+                responses: # Expected responses to the callback message
                   '200':
                     description: Your server returns this code if it accepts the callback
         responses:
@@ -162,32 +113,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                organisatieId:
-                  description: identificatie van de organisatie
-                  type: string
-                organisatieIdType:
-                  description: type identificatie van de organisatie
-                  type: string
-                timestamp:
-                    type: string
-                    format: date-time
-                abonnementId:
-                  type: string
-                  format: uuid
-                eventType:
-                  type: string
-                  enum: ["all","create", "update", "delete"]
-                recordId:
-                  type: string
-              required:
-                - organisatieId
-                - organisatieIdType
-                - timestamp
-                - abonnementId
-                - eventType
-                - recordId
+              $ref: "#/components/schemas/Notificatie"
       responses:
         '202':
           description: notificatie ontvangen
@@ -311,3 +237,65 @@ paths:
                   vervaldatum:
                     description: Vervaldatum consent
                     type: string
+components:
+  schemas:
+    Abonnement:
+      type: object
+      properties:
+        organisatieId:
+          description: identificatie van de organisatie
+          type: string
+        organisatieIdType:
+          description: type identificatie van de organisatie
+          type: string
+        abonnementType:
+          description: Type abonement dat geplaatst moet worden
+          type: string
+          enum: [ "organisatie","record", "persoon" ]
+        eventType:
+          description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+          type: string
+          enum: [ "all","create", "update", "delete" ]
+        entiteit:
+          description: entiteit waarop het abonnement geplaatst moet worden
+          type: string
+        recordId:
+          description: Identificatie van het record waarop het abonnement geplaatst wordt
+          type: string
+        personId:
+          description: Identificatie van de persoon waarop het abonnement geplaatst wordt
+          type: string
+      required:
+        - organisatieId
+        - organisatieIdType
+        - abonnementType
+        - eventType
+        - entiteit
+    Notificatie:
+      type: object
+      properties:
+        organisatieId:
+          description: identificatie van de organisatie
+          type: string
+        organisatieIdType:
+          description: type identificatie van de organisatie
+          type: string
+        timestamp:
+          type: string
+          format: date-time
+        abonnementId:
+          type: string
+          format: uuid
+        eventType:
+          type: string
+          enum: [ "all","create", "update", "delete" ]
+        recordID:
+          type: string
+          example: "https://api.ciz.nl/wlzindicatieregister/wlzindicaties/da8ebd42-d29b-4508-8604-ae7d2c6bbddd"
+      required:
+        - organisatieId
+        - organisatieIdType
+        - timestamp
+        - abonnementId
+        - eventType
+        - recordID
