EventType "all" verwijderd uit Netwerkpunt notificatie schema

--- a/api-specificatie/netwerkpunt.yaml
+++ b/api-specificatie/netwerkpunt.yaml
@@ -288,7 +288,7 @@ components:
           format: uuid
         eventType:
           type: string
-          enum: [ "all","create", "update", "delete" ]
+          enum: ["create", "update", "delete"]
         recordID:
           type: string
           example: "https://api.ciz.nl/wlzindicatieregister/wlzindicaties/da8ebd42-d29b-4508-8604-ae7d2c6bbddd"
